{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 141,
  "lineage": "50e45455-4974-d2fa-5796-84b353ea29f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019c1e0f36fa08c62",
            "arn": "arn:aws:ec2:eu-south-1:787149512820:instance/i-013b625cbc84b1ee1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013b625cbc84b1ee1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095557356e9a207b6",
            "private_dns": "ip-10-0-0-229.eu-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.229",
            "public_ip": "35.152.94.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005d60a7872c53491",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b9da68032f5617b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d777bc7670d6fe17",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9da68032f5617b4"
            ]
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019c1e0f36fa08c62",
            "arn": "arn:aws:ec2:eu-south-1:787149512820:instance/i-08964ffedb6e33573",
            "associate_public_ip_address": true,
            "availability_zone": "eu-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08964ffedb6e33573",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3e27fd2d067c48c",
            "private_dns": "ip-10-0-1-129.eu-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_ip": "15.161.53.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba8a18a97015d38d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b9da68032f5617b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0fdfe6b5a4bfc89",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9da68032f5617b4"
            ]
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:internet-gateway/igw-0b223826191a8558e",
            "id": "igw-0b223826191a8558e",
            "owner_id": "787149512820",
            "tags": {
              "Name": "two-tier-ig"
            },
            "tags_all": {
              "Name": "two-tier-ig"
            },
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:loadbalancer/app/two-tier-alb/49235b1b1eb2e80a",
            "arn_suffix": "app/two-tier-alb/49235b1b1eb2e80a",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "two-tier-alb-1941669262.eu-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:loadbalancer/app/two-tier-alb/49235b1b1eb2e80a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "two-tier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b9da68032f5617b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d777bc7670d6fe17"
              },
              {
                "subnet_id": "subnet-0f0fdfe6b5a4bfc89"
              }
            ],
            "subnets": [
              "subnet-0d777bc7670d6fe17",
              "subnet-0f0fdfe6b5a4bfc89"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-08362975306d84c79",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3ULH7SSC9OV64"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:listener/app/two-tier-alb/49235b1b1eb2e80a/e0868e8f998986ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:listener/app/two-tier-alb/49235b1b1eb2e80a/e0868e8f998986ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:loadbalancer/app/two-tier-alb/49235b1b1eb2e80a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.target-group",
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87",
            "arn_suffix": "targetgroup/two-tier-tg/94275d52624a3e87",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "two-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87-20240402154549484100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87",
            "target_id": "i-013b625cbc84b1ee1"
          },
          "dependencies": [
            "aws_instance.instance-1",
            "aws_lb_target_group.target-group",
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87-20240402154549609600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-1:787149512820:targetgroup/two-tier-tg/94275d52624a3e87",
            "target_id": "i-08964ffedb6e33573"
          },
          "dependencies": [
            "aws_instance.instance-2",
            "aws_lb_target_group.target-group",
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:route-table/rtb-02da296d12ffbced2",
            "id": "rtb-02da296d12ffbced2",
            "owner_id": "787149512820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b223826191a8558e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "two-tier-pub-rt"
            },
            "tags_all": {
              "Name": "two-tier-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362975306d84c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b3726cf163c6126",
            "route_table_id": "rtb-02da296d12ffbced2",
            "subnet_id": "subnet-0d777bc7670d6fe17"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6c06c91f97f37c",
            "route_table_id": "rtb-02da296d12ffbced2",
            "subnet_id": "subnet-0f0fdfe6b5a4bfc89"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:security-group/sg-0cc05cf7b5642d30e",
            "description": "Allow tls for inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc05cf7b5642d30e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9da68032f5617b4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "two-tier-db-sg",
            "name_prefix": "",
            "owner_id": "787149512820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "two-tier-db-sg"
            },
            "tags_all": {
              "Name": "two-tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362975306d84c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.sg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:security-group/sg-0c2d3b62b9c93fac5",
            "description": "Allow tls for inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2d3b62b9c93fac5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "two-tier-lb-sg",
            "name_prefix": "",
            "owner_id": "787149512820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362975306d84c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:security-group/sg-0b9da68032f5617b4",
            "description": "Allow tls for inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9da68032f5617b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2d3b62b9c93fac5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2d3b62b9c93fac5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "two-tier-sg",
            "name_prefix": "",
            "owner_id": "787149512820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-08362975306d84c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:subnet/subnet-0bd17a7dbec12f170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd17a7dbec12f170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787149512820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:subnet/subnet-0e652239abf5b1d0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e652239abf5b1d0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787149512820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:subnet/subnet-0d777bc7670d6fe17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d777bc7670d6fe17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787149512820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:subnet/subnet-0f0fdfe6b5a4bfc89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0fdfe6b5a4bfc89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787149512820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08362975306d84c79"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:787149512820:vpc/vpc-08362975306d84c79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fcc929f60dae6969",
            "default_route_table_id": "rtb-06ae7a9f1a52a4e00",
            "default_security_group_id": "sg-0570836e1175e14f3",
            "dhcp_options_id": "dopt-0eb228e6723417e7d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08362975306d84c79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ae7a9f1a52a4e00",
            "owner_id": "787149512820",
            "tags": {
              "Name": "two-tier-vpc"
            },
            "tags_all": {
              "Name": "two-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}